--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,7 @@
 on:
   workflow_dispatch:
   push:
-    branches: main
+    branches: [ main ]
 
 name: Quarto Publish
 
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      pages: write
+      id-token: write
+
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -17,17 +20,26 @@ jobs:
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
 
-      - name: Install Python and Dependencies
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
-          cache: 'pip'
-      - run: pip install jupyter
-      - run: pip install -r requirements.txt
+          python-version: "3.12"
+          cache: pip
 
-      - name: Render and Publish
+      - name: Install dependencies
+        run: |
+          pip install jupyter
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+      - name: Render site
+        uses: quarto-dev/quarto-actions/render@v2
+        with:
+          path: ad688-sp25-lab01   # 👈 tu carpeta con _quarto.yml
+
+      - name: Publish site
         uses: quarto-dev/quarto-actions/publish@v2
         with:
           target: gh-pages
+          path: ad688-sp25-lab01   # 👈 igual aquí
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
